<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/loginBkColor"
    android:focusableInTouchMode="true"
    android:gravity="center"
    tools:context=".auth.logIn.LogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="150dp"
                    android:textSize="26sp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/black"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/existing_user"/>

                <ImageView
                    android:layout_width="290dp"
                    android:layout_height="300dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/bg_log_in" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextEmail"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin">

                <EditText
                    android:id="@+id/editTextPassword"
                    style="@style/modifiedEditText"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/viewParent"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forgot_password"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/newsMoreTextSize" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="180dp"
                android:layout_height="60dp"
                android:id="@+id/logInBtn"
                android:text="@string/login"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/login_button_bk"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:fontFamily="sans-serif-medium"/>


            <TextView
                android:id="@+id/existing"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onLoginClick"
                android:text="@string/login_signup_hint"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textSize="17dp"
                android:padding="5dp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>