<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_gravity="center"
android:background="@color/loginBkColor"
android:focusableInTouchMode="true"
android:gravity="center"
tools:context=".auth.signUp.SignUpActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="150dp"
                android:textSize="26sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/sign_up_header"/>

            <ImageView
                android:layout_width="290dp"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/bg_sign_up" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            app:cardBackgroundColor="@color/whiteTextColor"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputName"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextName"
                        style="@style/modifiedEditText"
                        android:hint="Name"
                        android:inputType="textPersonName"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_email_hint"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_password_hint"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/textInputMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F8F5F5"
                    android:weightSum="6"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/editTextCountry"
                        android:layout_height="30dp"
                        android:layout_width="150dp"
                        android:layout_marginRight="30dp"
                        android:hint="Country"
                        android:gravity="center"
                        android:inputType="text"
                        android:clickable="false"
                        android:layout_weight="5"
                        android:maxLines="1" />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="1"
                        android:id="@+id/drop"
                        android:clickable="false"
                        android:background="@drawable/ic_drop_down"/>
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="180dp"
                    android:layout_height="60dp"
                    android:id="@+id/logInBtn"
                    android:text="@string/signup"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@drawable/login_button_bk"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:fontFamily="sans-serif-medium"/>

                <TextView
                    android:id="@+id/existing"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:onClick="onLoginClick"
                    android:text="@string/signup_login_hint"
                    android:textAlignment="center"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="17dp"
                    android:padding="5dp"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>

</RelativeLayout>